Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: 10.5.4
-
Fix Version/s: 10.5.5
-
Component/s: Character Sets, Optimizer
-
Labels:None
-
Environment:mariadb:10.5 docker image
Description
Creating a table with a LONGTEXT column with COLLATE doesn't sort properly.
Using TEXT or dropping COLLATE working as expected. Also working on 10.4.
CREATE TABLE t (
|
c LONGTEXT COLLATE utf8mb4_swedish_ci
|
);
|
INSERT INTO t (c) VALUES ('A'),('Z'),('B'),('Y');
|
SELECT * FROM t ORDER BY c ASC;
|
Result:
A,Z,B,Y
Expected:
A,B,Y,Z